// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CommandPalette > renders with descriptionKey correctly 1`] = `
"<div dir="ltr" data-slot="root">
  <div data-slot="root" class=""><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span><input type="text" placeholder="Type a command or search…" data-slot="input" autocomplete="off" aria-disabled="false" value="" aria-activedescendant="akar-listbox-item-v-0-0-1">
    <!--v-if-->
  </div>
  <div role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical" data-slot="content" class="">
    <div role="presentation" data-slot="viewport" class="">
      <div role="group" aria-labelledby="akar-listbox-group-v-0-0-0" data-slot="group" class="">
        <!--v-if--><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-1" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item="" data-highlighted=""><span class="iconify i-lucide:folder-plus" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Create Project</span>
          <!--v-if--></span><span data-slot="itemDescription" class="">Create Project</span></span><span data-slot="itemTrailing" class=""><span data-slot="itemTrailingKbds" class=""><kbd class="">Ctrl</kbd><kbd class="">N</kbd></span>
          <!--v-if--></span>
        </button><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-2" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item=""><span class="iconify i-lucide:file" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Open File</span>
          <!--v-if--></span><span data-slot="itemDescription" class="">Open File</span></span><span data-slot="itemTrailing" class=""><span data-slot="itemTrailingKbds" class=""><kbd class="">Ctrl</kbd><kbd class="">O</kbd></span>
          <!--v-if--></span>
        </button><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-3" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item=""><span class="iconify i-lucide:settings" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Settings</span>
          <!--v-if--></span><span data-slot="itemDescription" class="">Settings</span></span><span data-slot="itemTrailing" class=""><span data-slot="itemTrailingKbds" class=""><kbd class="">Ctrl</kbd><kbd class="">,</kbd></span>
          <!--v-if--></span>
        </button>
      </div>
      <div role="group" aria-labelledby="akar-listbox-group-v-0-0-4" data-slot="group" class="">
        <div id="akar-listbox-group-v-0-0-4" data-slot="label" class="">Recent Files</div><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-5" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item=""><span class="iconify i-lucide:file-code" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">index.vue</span>
          <!--v-if--></span><span data-slot="itemDescription" class="">index.vue</span></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
        </button><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-6" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item=""><span class="iconify i-lucide:file-code" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">app.vue</span>
          <!--v-if--></span><span data-slot="itemDescription" class="">app.vue</span></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
        </button>
      </div>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`CommandPalette > renders with groups with description correctly 1`] = `
"<div dir="ltr" data-slot="root">
  <div data-slot="root" class=""><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span><input type="text" placeholder="Type a command or search…" data-slot="input" autocomplete="off" aria-disabled="false" value="" aria-activedescendant="akar-listbox-item-v-0-0-1">
    <!--v-if-->
  </div>
  <div role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical" data-slot="content" class="">
    <div role="presentation" data-slot="viewport" class="">
      <div role="group" aria-labelledby="akar-listbox-group-v-0-0-0" data-slot="group" class="">
        <!--v-if--><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-1" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item="" data-highlighted=""><span class="iconify i-lucide:folder-plus" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Create Project</span>
          <!--v-if--></span><span data-slot="itemDescription" class="">Start a new project from scratch</span></span><span data-slot="itemTrailing" class=""><span data-slot="itemTrailingKbds" class=""><kbd class="">Ctrl</kbd><kbd class="">N</kbd></span>
          <!--v-if--></span>
        </button><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-2" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item=""><span class="iconify i-lucide:file" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Open File</span>
          <!--v-if--></span><span data-slot="itemDescription" class="">Browse and open an existing file</span></span><span data-slot="itemTrailing" class=""><span data-slot="itemTrailingKbds" class=""><kbd class="">Ctrl</kbd><kbd class="">O</kbd></span>
          <!--v-if--></span>
        </button><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-3" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item=""><span class="iconify i-lucide:settings" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Settings</span>
          <!--v-if--></span><span data-slot="itemDescription" class="">Configure your preferences</span></span><span data-slot="itemTrailing" class=""><span data-slot="itemTrailingKbds" class=""><kbd class="">Ctrl</kbd><kbd class="">,</kbd></span>
          <!--v-if--></span>
        </button>
      </div>
      <div role="group" aria-labelledby="akar-listbox-group-v-0-0-4" data-slot="group" class="">
        <div id="akar-listbox-group-v-0-0-4" data-slot="label" class="">Recent Files</div><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-5" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item=""><span class="iconify i-lucide:file-code" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">index.vue</span>
          <!--v-if--></span><span data-slot="itemDescription" class="">/src/pages/index.vue</span></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
        </button><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-6" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item=""><span class="iconify i-lucide:file-code" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">app.vue</span>
          <!--v-if--></span><span data-slot="itemDescription" class="">/app.vue</span></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
        </button>
      </div>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`CommandPalette > renders with item slot correctly 1`] = `
"<div dir="ltr" data-slot="root">
  <div data-slot="root" class=""><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span><input type="text" placeholder="Type a command or search…" data-slot="input" autocomplete="off" aria-disabled="false" value="" aria-activedescendant="akar-listbox-item-v-0-0-1">
    <!--v-if-->
  </div>
  <div role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical" data-slot="content" class="">
    <div role="presentation" data-slot="viewport" class="">
      <div role="group" aria-labelledby="akar-listbox-group-v-0-0-0" data-slot="group" class="">
        <!--v-if--><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-1" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item="" data-highlighted="">Item slot</button><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-2" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item="">Item slot</button><button type="button" disabled="" data-slot="item" id="akar-listbox-item-v-0-0-3" role="option" tabindex="-1" aria-selected="false" data-disabled="" data-state="unchecked" data-akar-collection-item="">Item slot</button><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-4" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item=""><span class="iconify i-lucide:tag" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Add label</span><span data-slot="itemLabelSuffix" class="">Add a label to the current item.</span></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><span data-slot="itemTrailingKbds" class=""><kbd class="">Ctrl</kbd><kbd class="">L</kbd></span>
          <!--v-if--></span>
        </button>
      </div>
      <div role="group" aria-labelledby="akar-listbox-group-v-0-0-5" data-slot="group" class="">
        <div id="akar-listbox-group-v-0-0-5" data-slot="label" class="">Labels</div><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-6" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item="">Item slot</button><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-7" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item="">Item slot</button><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-8" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item="">Item slot</button>
      </div>
      <div role="group" aria-labelledby="akar-listbox-group-v-0-0-9" data-slot="group" class="">
        <div id="akar-listbox-group-v-0-0-9" data-slot="label" class="">Users</div><a href="https://github.com/benjamincanac" role="option" tabindex="-1" rel="noopener noreferrer" target="_blank" data-slot="item" id="akar-listbox-item-v-0-0-10" aria-selected="false" data-state="unchecked" data-akar-collection-item="">Item slot</a>
      </div>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`CommandPalette > renders with item-description slot correctly 1`] = `
"<div dir="ltr" data-slot="root">
  <div data-slot="root" class=""><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span><input type="text" placeholder="Type a command or search…" data-slot="input" autocomplete="off" aria-disabled="false" value="" aria-activedescendant="akar-listbox-item-v-0-0-1">
    <!--v-if-->
  </div>
  <div role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical" data-slot="content" class="">
    <div role="presentation" data-slot="viewport" class="">
      <div role="group" aria-labelledby="akar-listbox-group-v-0-0-0" data-slot="group" class="">
        <!--v-if--><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-1" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item="" data-highlighted=""><span class="iconify i-lucide:folder-plus" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Create Project</span>
          <!--v-if--></span><span data-slot="itemDescription" class="">Item description slot</span></span><span data-slot="itemTrailing" class=""><span data-slot="itemTrailingKbds" class=""><kbd class="">Ctrl</kbd><kbd class="">N</kbd></span>
          <!--v-if--></span>
        </button><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-2" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item=""><span class="iconify i-lucide:file" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Open File</span>
          <!--v-if--></span><span data-slot="itemDescription" class="">Item description slot</span></span><span data-slot="itemTrailing" class=""><span data-slot="itemTrailingKbds" class=""><kbd class="">Ctrl</kbd><kbd class="">O</kbd></span>
          <!--v-if--></span>
        </button><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-3" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item=""><span class="iconify i-lucide:settings" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Settings</span>
          <!--v-if--></span><span data-slot="itemDescription" class="">Item description slot</span></span><span data-slot="itemTrailing" class=""><span data-slot="itemTrailingKbds" class=""><kbd class="">Ctrl</kbd><kbd class="">,</kbd></span>
          <!--v-if--></span>
        </button>
      </div>
      <div role="group" aria-labelledby="akar-listbox-group-v-0-0-4" data-slot="group" class="">
        <div id="akar-listbox-group-v-0-0-4" data-slot="label" class="">Recent Files</div><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-5" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item=""><span class="iconify i-lucide:file-code" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">index.vue</span>
          <!--v-if--></span><span data-slot="itemDescription" class="">Item description slot</span></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
        </button><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-6" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item=""><span class="iconify i-lucide:file-code" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">app.vue</span>
          <!--v-if--></span><span data-slot="itemDescription" class="">Item description slot</span></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
        </button>
      </div>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`CommandPalette > renders with item-leading slot correctly 1`] = `
"<div dir="ltr" data-slot="root">
  <div data-slot="root" class=""><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span><input type="text" placeholder="Type a command or search…" data-slot="input" autocomplete="off" aria-disabled="false" value="" aria-activedescendant="akar-listbox-item-v-0-0-1">
    <!--v-if-->
  </div>
  <div role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical" data-slot="content" class="">
    <div role="presentation" data-slot="viewport" class="">
      <div role="group" aria-labelledby="akar-listbox-group-v-0-0-0" data-slot="group" class="">
        <!--v-if--><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-1" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item="" data-highlighted="">Item leading slot<span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Add new file</span><span data-slot="itemLabelSuffix" class="">Create a new file in the current directory or workspace.</span></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><span data-slot="itemTrailingKbds" class=""><kbd class="">Ctrl</kbd><kbd class="">N</kbd></span>
          <!--v-if--></span>
        </button><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-2" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item="">Item leading slot<span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Add new folder</span><span data-slot="itemLabelSuffix" class="">Create a new folder in the current directory or workspace.</span></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><span data-slot="itemTrailingKbds" class=""><kbd class="">Ctrl</kbd><kbd class="">F</kbd></span>
          <!--v-if--></span>
        </button><button type="button" disabled="" data-slot="item" id="akar-listbox-item-v-0-0-3" role="option" tabindex="-1" aria-selected="false" data-disabled="" data-state="unchecked" data-akar-collection-item="">Item leading slot<span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Add hashtag</span><span data-slot="itemLabelSuffix" class="">Add a hashtag to the current item.</span></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><span data-slot="itemTrailingKbds" class=""><kbd class="">Ctrl</kbd><kbd class="">H</kbd></span>
          <!--v-if--></span>
        </button><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-4" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item=""><span class="iconify i-lucide:tag" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Add label</span><span data-slot="itemLabelSuffix" class="">Add a label to the current item.</span></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><span data-slot="itemTrailingKbds" class=""><kbd class="">Ctrl</kbd><kbd class="">L</kbd></span>
          <!--v-if--></span>
        </button>
      </div>
      <div role="group" aria-labelledby="akar-listbox-group-v-0-0-5" data-slot="group" class="">
        <div id="akar-listbox-group-v-0-0-5" data-slot="label" class="">Labels</div><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-6" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item="">Item leading slot<span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">bug</span>
          <!--v-if--></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
        </button><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-7" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item="">Item leading slot<span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">feature</span>
          <!--v-if--></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
        </button><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-8" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item="">Item leading slot<span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">enhancement</span>
          <!--v-if--></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
        </button>
      </div>
      <div role="group" aria-labelledby="akar-listbox-group-v-0-0-9" data-slot="group" class="">
        <div id="akar-listbox-group-v-0-0-9" data-slot="label" class="">Users</div><a href="https://github.com/benjamincanac" role="option" tabindex="-1" rel="noopener noreferrer" target="_blank" data-slot="item" id="akar-listbox-item-v-0-0-10" aria-selected="false" data-state="unchecked" data-akar-collection-item="">Item leading slot<span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">benjamincanac</span>
          <!--v-if--></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
        </a>
      </div>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`CommandPalette > renders with searchTerm and preserveGroupOrder correctly 1`] = `
"<div dir="ltr" data-slot="root">
  <div data-slot="root" class=""><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span><input type="text" placeholder="Type a command or search…" data-slot="input" autocomplete="off" aria-disabled="false" value="f" aria-activedescendant="akar-listbox-item-v-0-0-1">
    <!--v-if-->
  </div>
  <div role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical" data-slot="content" class="">
    <div role="presentation" data-slot="viewport" class="">
      <div role="group" aria-labelledby="akar-listbox-group-v-0-0-0" data-slot="group" class="">
        <!--v-if--><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-1" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item="" data-highlighted=""><span class="iconify i-lucide:file-plus" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Add new file</span><span data-slot="itemLabelSuffix" class="">Create a new file in the current directory or workspace.</span></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><span data-slot="itemTrailingKbds" class=""><kbd class="">Ctrl</kbd><kbd class="">N</kbd></span>
          <!--v-if--></span>
        </button><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-2" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item=""><span class="iconify i-lucide:folder-plus" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Add new folder</span><span data-slot="itemLabelSuffix" class="">Create a new folder in the current directory or workspace.</span></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><span data-slot="itemTrailingKbds" class=""><kbd class="">Ctrl</kbd><kbd class="">F</kbd></span>
          <!--v-if--></span>
        </button>
      </div>
      <div role="group" aria-labelledby="akar-listbox-group-v-0-0-3" data-slot="group" class="">
        <div id="akar-listbox-group-v-0-0-3" data-slot="label" class="">Labels</div><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-4" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item="">
          <div data-slot="root" class=""><span data-slot="base" class=""></span></div><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">feature</span>
          <!--v-if--></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
        </button>
      </div>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`CommandPalette > renders with searchTerm correctly 1`] = `
"<div dir="ltr" data-slot="root">
  <div data-slot="root" class=""><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span><input type="text" placeholder="Type a command or search…" data-slot="input" autocomplete="off" aria-disabled="false" value="f" aria-activedescendant="akar-listbox-item-v-0-0-1">
    <!--v-if-->
  </div>
  <div role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical" data-slot="content" class="">
    <div role="presentation" data-slot="viewport" class="">
      <div role="group" aria-labelledby="akar-listbox-group-v-0-0-0" data-slot="group" class="">
        <div id="akar-listbox-group-v-0-0-0" data-slot="label" class="">Labels</div><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-1" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item="" data-highlighted="">
          <div data-slot="root" class=""><span data-slot="base" class=""></span></div><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">feature</span>
          <!--v-if--></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
        </button>
      </div>
      <div role="group" aria-labelledby="akar-listbox-group-v-0-0-2" data-slot="group" class="">
        <!--v-if--><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-3" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item=""><span class="iconify i-lucide:file-plus" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Add new file</span><span data-slot="itemLabelSuffix" class="">Create a new file in the current directory or workspace.</span></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><span data-slot="itemTrailingKbds" class=""><kbd class="">Ctrl</kbd><kbd class="">N</kbd></span>
          <!--v-if--></span>
        </button><button type="button" data-slot="item" id="akar-listbox-item-v-0-0-4" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-akar-collection-item=""><span class="iconify i-lucide:folder-plus" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Add new folder</span><span data-slot="itemLabelSuffix" class="">Create a new folder in the current directory or workspace.</span></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><span data-slot="itemTrailingKbds" class=""><kbd class="">Ctrl</kbd><kbd class="">F</kbd></span>
          <!--v-if--></span>
        </button>
      </div>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`CommandPalette > renders with virtualize correctly 1`] = `
"<div dir="ltr" data-slot="root">
  <div data-slot="root" class=""><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span><input type="text" placeholder="Type a command or search…" data-slot="input" autocomplete="off" aria-disabled="false" value="">
    <!--v-if-->
  </div>
  <div role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical" data-slot="content" class="">
    <div role="presentation" data-slot="viewport" class="">
      <div data-akar-virtualizer="" style="position: relative; width: 100%; height: 256px;"></div>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`CommandPalette > renders without groups correctly 1`] = `
"<div dir="ltr" data-slot="root">
  <div data-slot="root" class=""><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span><input type="text" placeholder="Type a command or search…" data-slot="input" autocomplete="off" aria-disabled="false" value="">
    <!--v-if-->
  </div>
  <div role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical" data-slot="content" class="">
    <div data-slot="empty" class="">No data</div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;
